# regressao_linear

./: .gitignore  01 - SCRIPT - REGRESSÃO SIMPLES E MÚLTIPLA.py  02 - SCRIPT - MODELOS LOGÍSTICOS BINÁRIOS E MULTINOMIAIS.py  03 - SCRIPT - MODELOS PARA DADOS DE CONTAGEM.py  EXEMPLO1.html  README.md  diagnostico_heterocedasticidade.ipynb  diagnostico_multicolinearidade.ipynb  exemplo.ipynb  modelagem_multinivel_dois_niveis.ipynb  modelos_logisticos_binarios_multinomiais.ipynb  notebook_execucao.ipynb  padronizacao.ipynb  pyproject.toml  regressao_linear_multi_com_var_quali.ipynb  regressao_linear_multipla.ipynb  regressao_linear_multipla_multivariada.ipynb  regressao_linear_multivariada.ipynb  regressao_linear_simples.ipynb  regressao_nao_linear_multipla_com_dummies.ipynb  regressao_nao_linear_mutipla.ipynb  regressao_nao_linear_simples.ipynb  teste-f_explicado.ipynb  teste-t_explicado.ipynb
adicionais/: aula_4.1.1_exemplo_multicolinearidade.ipynb  aula_4.1_diagnostico_multicolinearidade.ipynb  aula_4.2_diagnostico_heterocedasticidade.ipynb  diagnostico_heterocedasticidade.ipynb  diagnostico_multicolinearidade.ipynb  distribuicao_poisson.ipynb  padronizacao.ipynb
modelos_multinivel/: aula_9.1_modelo_nulo_hlm2.ipynb  aula_9_modelagem_multinivel_dois_niveis.ipynb
regressao_linear/: aula_1_regressao_linear_simples.ipynb  aula_2.1_regressao_linear_multivariada.ipynb  aula_3.1_regressao_nao_linear_simples.ipynb  aula_3.2_regressao_nao_linear_mutipla.ipynb  aula_4.3_regressao_nao_linear_multipla_com_dummies.ipynb  regressao_linear_multi_com_var_quali.ipynb  (+4 more)
(+16 files in other folders)
